<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ca.thanasi.unitconverter.MainActivity">

    <LinearLayout
        android:id="@+id/linear_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_blue"
        android:elevation="4dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/amount_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:hint="@string/convert_from"
            android:inputType="numberDecimal"
            android:textColor="@color/white" />

        <Spinner
            android:id="@+id/unit_type_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/custom_spinner_bg"
            android:drawSelectorOnTop="true"
            android:paddingLeft="10dp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <android.support.v7.widget.CardView
                android:id="@+id/card_view_sqkm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="4dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                <TextView
                    android:id="@+id/sqKilometerTitle_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_sqkm"
                    android:paddingBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/sqKilometer_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="5dp"
                    android:textSize="19sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_view_ha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="4dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/hectareTitle_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_ha"
                        android:paddingBottom="5dp"
                        android:layout_marginLeft="5dp"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/hectare_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginRight="5dp"
                        android:textSize="19sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_view_sqm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="4dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/sqMeterTitle_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_sqm"
                        android:paddingBottom="5dp"
                        android:layout_marginLeft="5dp"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/sqMeter_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginRight="5dp"
                        android:textSize="19sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_view_sqcm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="4dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/sqCentimeterTitle_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_sqcm"
                        android:paddingBottom="5dp"
                        android:layout_marginLeft="5dp"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/sqCentimeter_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginRight="5dp"
                        android:textSize="19sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_view_sqmi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="4dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/sqMileTitle_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_sqmi"
                        android:paddingBottom="5dp"
                        android:layout_marginLeft="5dp"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/sqMile_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginRight="5dp"
                        android:textSize="19sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_view_ac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="4dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/acreTitle_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_ac"
                        android:paddingBottom="5dp"
                        android:layout_marginLeft="5dp"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/acre_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginRight="5dp"
                        android:textSize="19sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_view_sqyd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="4dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/sqYardTitle_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_sqyd"
                        android:paddingBottom="5dp"
                        android:layout_marginLeft="5dp"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/sqYard_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginRight="5dp"
                        android:textSize="19sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_view_sqft"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="4dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/sqFootTitle_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_sqft"
                        android:paddingBottom="5dp"
                        android:layout_marginLeft="5dp"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/sqFoot_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginRight="5dp"
                        android:textSize="19sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_view_sqin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="4dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/sqInchTitle_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_sqin"
                        android:paddingBottom="5dp"
                        android:layout_marginLeft="5dp"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/sqInch_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginRight="5dp"
                        android:textSize="19sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

</LinearLayout>